Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,8 +41,8 @@ stages:
           - task: AzureWebApp@1
             displayName: 'Deploying Namoluk'
             inputs:
-              azureSubscription: '90d7af21-b3a1-4bf8-a149-8e1fcc47e337'
+              azureSubscription: 'MAIC - TEK Experts CR - v-gengon Group#1 (90d7af21-b3a1-4bf8-a149-8e1fcc47e337)'
               appType: 'webApp'
-              appName: 'ASP-2204290040005774'
+              appName: 'FunctionApp-2204290040005774'
               package: '$(Build.BinariesDirectory)/**/*.zip'
               deploymentMethod: auto
